--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "NODE_ENV=test mocha",
     "test:coverage": "nyc --reporter html --reporter text npm test",
     "serve": "npx http-server coverage/",
-    "knex:migration": "knex migrate:make"
+    "knex:make": "knex migrate:make",
+    "knex:migration": "knex migrate:latest"
   },
   "keywords": [],
   "author": "",
