--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nock": "^13.2.1",
     "chai": "^4.3.4",
+    "faker": "^5.5.3",
     "mocha": "^9.1.3",
+    "nock": "^13.2.1",
     "nyc": "^15.1.0"
   },
   "dependencies": {
